--- a/instrument/templates/index.html
+++ b/instrument/templates/index.html
@@ -4,5 +4,5 @@
 
 {% block body %}
     <h1>Wellcome!</h1>
-    <h3><a href="{% url 'instrument:list' %}">仪器列表</a></h3>
+    <h3><a href="{% url 'instrument:list' %}">预约系统入口>></a></h3>
 {% endblock %}
