--- a/instrument/templates/base.html
+++ b/instrument/templates/base.html
@@ -30,11 +30,11 @@
            <ul class="nav navbar-nav navbar-right">
                <!--<li><a href="#">New blog</a></li>-->
                <li>
-{#                   {% if request.user.is_active %}#}
-{#                       <p class="navbar-text">{{ user.username }}/<a href="{% url 'conferance:logo' %}">Logout</a> </p>#}
-{#                   {% else %}#}
-{#                       <p class="navbar-text"><a href="{% url 'conferance:register' %}">Register</a>/<a href="{% url 'conferance:logi' %}">Login</a></p>#}
-{#                   {% endif %}#}
+                   {% if request.user.is_active %}
+                       <p class="navbar-text">{{ user.username }}/<a href="{% url 'instrument:logo' %}">Logout</a> </p>
+                   {% else %}
+                       <p class="navbar-text"><a href="{% url 'instrument:register' %}">Register</a>/<a href="{% url 'instrument:logi' %}">Login</a></p>
+                   {% endif %}
                </li>
            </ul>
 
