--- a/instrument/templates/index.html
+++ b/instrument/templates/index.html
@@ -3,6 +3,6 @@
 {% block title %}index{% endblock %}
 
 {% block body %}
-    <h1>Wellcome!</h1>
+    <h1>Welcome to kfhuo's group!</h1>
     <h3><a href="{% url 'instrument:list' %}">预约系统入口>></a></h3>
 {% endblock %}
