--- a/instrument/templates/order.html
+++ b/instrument/templates/order.html
@@ -25,6 +25,7 @@
         {% endfor %}
     {% endif %}
     </table>
+    <p>说明：管式炉1和管式炉2在物理间，管式炉3在徐娟办公室！</p>
     <br/>
     <a role="button" class="btn btn-default" href="{% url 'instrument:add' instrument.id %}">预约</a>
 {% endblock %}
